fix zoom on mobile

--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -24,6 +24,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  touch-action: manipulation;
 }
 
 body::-webkit-scrollbar{
